# MyRayTracer

./: .gitignore  CMakeLists.txt  Image.hpp  Main.cpp  Mesh.hpp  MyRayTracer  README.md  Ray.cpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp  Scene.hpp  Vec3.h  camera.hpp  image.ppm  utils.hpp
mesh_library/: example.off
